# Replit-Stock-App2

./: .gitignore  .replit  README.md  always_show_chart.py  app.py  create_repo.sh  database.py  db_ui.py  final_chart_solution.py  push_secure.sh  push_to_github.sh  push_to_github2.sh  push_with_new_token.sh  pyproject.toml  replit.nix  requirements_list.txt  simple_chart.py  static_chart.py  static_ma_chart.py
attached_assets/: Pasted-Stock-Data-Visualization-Tool-This-app-retrieves-stock-data-from-Yahoo-Finance-and-visualizes-it-wit-1744945844320.txt  Pasted-sqlalchemy-exc-OperationalError-psycopg2-OperationalError-SSL-connection-has-been-closed-unexpect-1744386191277.txt
